--- a/src/Nsgmls/Nsgmls.csproj
+++ b/src/Nsgmls/Nsgmls.csproj
@@ -4,7 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
+    <NoWarn>CS8632;CS0109;CS0414</NoWarn>
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
