Bundle SGML catalog files with executables

--- a/src/Jade/Jade.csproj
+++ b/src/Jade/Jade.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\OpenJade\OpenJade.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="sgml\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
