--- a/src/Jade/Jade.csproj
+++ b/src/Jade/Jade.csproj
@@ -7,6 +7,8 @@
     <Nullable>disable</Nullable>
     <NoWarn>CS8632;CS0109;CS0414</NoWarn>
     <LangVersion>preview</LangVersion>
+    <PublishAot>true</PublishAot>
+    <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
