--- a/src/OpenJade/OpenJade.csproj
+++ b/src/OpenJade/OpenJade.csproj
@@ -7,6 +7,7 @@
     <NoWarn>CS8632;CS0109;CS0414</NoWarn>
     <LangVersion>preview</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
