--- a/src/OpenJade/OpenJade.csproj
+++ b/src/OpenJade/OpenJade.csproj
@@ -12,7 +12,7 @@
 
   <PropertyGroup>
     <PackageId>OpenJade</PackageId>
-    <Version>1.3.2</Version>
+    <Version>1.3.3</Version>
     <Authors>James Clark;OpenJade Team;Ralf Schleitzer</Authors>
     <Description>DSSSL style engine library - a C# port of OpenJade. Transforms SGML/XML documents using DSSSL stylesheets to RTF, HTML, TeX, MIF, and other formats.</Description>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
@@ -20,6 +20,8 @@
     <RepositoryUrl>https://github.com/rschleitzer/openjade-net</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>dsssl;sgml;xml;openjade;stylesheet;rtf;html;tex</PackageTags>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
